# M365RoadMap

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Apply-Patches.ps1  Execute-Locally.ps1  Export-PrivateKey.ps1  InitialFiles.tar  M365RoadMap_Test.json  ProjectSetup.ps1  README.md  README_CI.md  README_PATCH.md  Test-AllDataPulls.ps1  copy_into_repo.ps1  enrichment_patch.diff  graph_config.example.json  graph_config.inline.json  graph_config.json  pfx.b64  pyproject.toml  requirements.txt  requirements.v2.additions.txt
.streamlit/: config.toml
app/: streamlit_app.py  streaqmlit_app.py
assets/: roadmap.css  roadmap.enhance.js
data/: M365RoadMap_Test.json
m365roadmap_ui/: __main__.py
output/: discovered_ids.csv  discovered_ids_gcc.csv  discovered_ids_loose.csv  fetch_stats.json  graph_messages_master.csv  master.csv  roadmap_report.md
prompts/: feature_summarize.md  feature_summarize_tailored.md  system_multi_id.md
scripts/: Check-ReportHeaders.ps1  ConnectivityValidator.ps1  Convert-PfxToCer.ps1  Export-M365ReportKeyFromStore.ps1  Find-DefaultValues.ps1  Get-GraphPUll.ps1  Invoke-GraphDoctor.ps1  Load-EnvGraphConfig.ps1  Reset-EnvVariables.ps1  Set-GitHubSecretEnv.ps1  Set-GraphEnv.ps1  __init__.ps1  __init__.py  _importlib_local.py  ci.yml  ci_generate_report.py  ci_write_graph_config.py  decode_pfx_length.py  diag_graph.py  diag_thumbprint.py  fallback_public_roadmap.py  fallback_rss_api.py  fetch_ids.py  fetch_messages_graph.py  generate_feature_reports.py  generate_report.py  generate_report.sh  get_token.py  graph_client.py  (+13 more)
(+28 files in other folders)
