[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m365roadmap-ui"
version = "0.1.0"
description = "Streamlit UI for M365 Roadmap"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Your Name"}]
dependencies = [
    "streamlit>=1.37",
    "pandas>=2.1",
    "python-dateutil>=2.9"
]

[project.scripts]
m365roadmap-ui = "m365roadmap_ui.__main__:main"

[tool.setuptools.package-data]
m365roadmap_ui = ["app/**/*.py"]
